--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 	</nav>
 
 	<div id="network-popUp">
-		<span id="operation">Add node</span> <br />
+		<span id="operation">Add Node</span> <br />
 		<table style="margin: auto">
 			<tr>
-				<td>id</td>
+				<td id="operation-text">id</td>
 				<td><input id="node-id" value="new value" /></td>
 			</tr>
 		</table>
