--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<a class="nav-link disabled" href="#">Spanning Tree</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Euler Circuit</a>
+						<a class="nav-link" href="#" onclick="EulerCircuit()">Euler Circuit</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#">Havel-Hakimi Algorithm</a>
