--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 	<script type="text/javascript" src="https://unpkg.com/alea@1.0.0/alea.js"></script>
 	<script type="text/javascript" src="exampleUtil.js"></script>
+
+	<script src="jsgraphs.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -49,7 +51,7 @@
 						<a class="nav-link " href="#" onclick="Bipartie()">Bipartie</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Spanning Tree</a>
+						<a class="nav-link" href="#" onclick="SpanningTree()">Spanning Tree</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" onclick="EulerCircuit()">Euler Circuit</a>
