--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<a class="nav-link" href="#" onclick="EulerCircuit()">Euler Circuit</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Havel-Hakimi Algorithm</a>
+						<a class="nav-link" href="#" onclick="HHA()">Havel-Hakimi Algorithm</a>
 					</li>
 				</ul>
 			</div>
