--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript" src="https://unpkg.com/alea@1.0.0/alea.js"></script>
 	<script type="text/javascript" src="exampleUtil.js"></script>
 
-	<script src="jsgraphs.js" type="text/javascript"></script>
+	<script src="jsgraphs.js" type="text/javascript"></script> -->
 </head>
 
 <body>
@@ -84,6 +84,10 @@
 			<p class = "h3">Graph Data:</p>
 			<!-- <label for="exampleFormControlTextarea1">Graph</label> -->
 			<textarea class="form-control" id="edgedata" rows="15" onkeyup="changetextarea()"></textarea>
+
+			<div class="gorder"><p class="h4">Order : </p> <h5 id="order"></h5></div>
+			<div class="gsize"><p class="h4">Size : </p> <h5 id="size"></h5></div>
+		
   		</div>
 
 		<!-- <div id="info" class="col"> 
